chat-space_index_view

--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -8,10 +8,10 @@
       %p.left-header__box__name test-user
       %ul.left-header__box__botton
         %li.left-header__box__botton__new-group
-          %a{:href => "#"}
+          %a{href: "#"}
             %i.fa.fa-edit
         %li.left-header__box__botton__new-acount
-          %a{:href => "#"}
+          %a{href: "#"}
             %i.fa.fa-cog
   .left-groups
     .group
@@ -28,7 +28,7 @@
     .top__left-box
       %p.top__left-box__group-name tech-expert
       %p.top__left-box__member Member
-    %a.top__edit-box{:href => "#"} Edit
+    %a.top__edit-box{href: "#"} Edit
   .talks
     .talk
       .talk__user-info
@@ -46,5 +46,5 @@
         %p.footer__message__box__text type a message
         %label.footer__message__box__image
           %i.fa.fa-image.fa-2x
-          %input.footer__message__box__image__file{:type => "file"}/
-      %a.footer__message__send-botton{:href => "#"} Send
+          %input.footer__message__box__image__file{type: "file"}/
+      %a.footer__message__send-botton{href: "#"} Send
