chat-spacs_index_edit2

--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -8,10 +8,10 @@
       %p.left-header__box__name test-user
       %ul.left-header__box__botton
         %li.left-header__box__botton__new-group
-          %a{href: "#"}
+          = link_to "#" do
             %i.fa.fa-edit
         %li.left-header__box__botton__new-acount
-          %a{href: "#"}
+          = link_to "#" do
             %i.fa.fa-cog
   .left-groups
     .group
