chat-space-new-group

--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -1,17 +1,18 @@
    
-.header
-  %p.header__text グループを作成しました
+-# .header
+-#   %p.header__text グループを作成しました
 
 .left-contents
   .left-header
     .left-header__box
-      %p.left-header__box__name test-user
+      %p.left-header__box__name 
+        = current_user.name
       %ul.left-header__box__botton
         %li.left-header__box__botton__new-group
-          = link_to "#" do
+          = link_to new_group_path do
             %i.fa.fa-edit
         %li.left-header__box__botton__new-acount
-          = link_to "#" do
+          = link_to edit_user_path(current_user) do
             %i.fa.fa-cog
   .left-groups
     .group
