--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,5 +1,8 @@
 @import "./reset";
 @import "font-awesome";
-@import "variable";
+@import "color";
 @import "index";
-
+@import "user";
+// @import "config/colors";
+@import "modules/flash";
+@import "group";
