--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -27,7 +27,7 @@
     .top__left-box
       %p.top__left-box__group-name tech-expert
       %p.top__left-box__member Member
-    =link_to 'Edit','#', class:'top__edit-box'
+    =link_to 'Edit','/groups/current_user_id/edit', class:'top__edit-box'
   .talks
     .talk
       .talk__user-info
