--- a/app/assets/stylesheets/_index.scss
+++ b/app/assets/stylesheets/_index.scss
@@ -76,46 +76,43 @@ html{
       }
     }
   }
-  .form{
-    background-color: $colorWhite;
-    padding: 10px 40px;
-    &__message{
-      &__box{
-        width: 800px;
-        height: 50px;
-        padding: 0 10px;
-        display: inline-block;
-        background-color: $colorWhite2;
-          &__text{
-            display: inline-block;
-            line-height: 50px;
-            color: $colorGray;
-          }
-        &__image{
-          display: inline-block;
-          float: right;
-          &__file{
-            display: none;
-          }
-          .fa-image{
-            color: $colorBlack;
-            margin-top: 10px;
-          }
-        }
-      }
-      &__send-botton{
-        width: 100px;
-        height: 50px;
-        display: inline-block;
-        background-color: $colorWriteBlue;
-        color: $colorWhite2;
-        margin-left: 15px;
-        text-align: center;
+  .form {
+    background-color: #DDDDDD;
+    box-sizing: border-box;
+    height: 90px;
+    padding: 20px 50px 20px 40px;
+    &__message {
+      border: none;
+      float: left;
+      height: 50px;
+      width: calc(100% - 150px);
+    }
+    &__mask {
+      background-color: white;
+      float: left;
+      height: 50px;
+      padding-right: 10px;
+      &__image {
+        font-size: 20px;
         line-height: 50px;
       }
+      .hidden {
+        display: none;
+      }
+    }
+    &__submit {
+      background-color: lightblue;
+      border: none;
+      color: $white;
+      float: right;
+      font-size: 16px;
+      height: 50px;
+      margin-left: 15px;
+      padding: 0 30px;
     }
   }
 }
+
 
 .left-contents{
   height: 100%;
