--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -18,7 +18,7 @@
             .group__group-name 
               = group.name
             .group__group-text 
-              まだメッセージがありません
+              = group.show_last_message
   .chat-space
     .top
       .top__left-box
