chat-space-inkrimentar2

--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -24,7 +24,8 @@
       .top__left-box
         %p.top__left-box__group-name tech-expert
         %p.top__left-box__member Member
-      =link_to 'Edit','/groups/current_user_id/edit', class:'top__edit-box'
+      = link_to edit_group_path(@group), class:'top__edit-box' do
+        .top__edit-box__btn Edit
     .talks
       = render @messages
       
