--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,8 +1,8 @@
 @import "./reset";
 @import "font-awesome";
-@import "color";
-@import "index";
-@import "user";
+@import "./color";
+@import "./index";
+@import "./user";
 // @import "config/colors";
 @import "modules/flash";
-@import "group";
+@import "./group.scss";
