--- a/app/views/groups/edit.html.haml
+++ b/app/views/groups/edit.html.haml
@@ -1,4 +1,4 @@
 .chat-group-form
   %h1 チャットグループ編集
-  = render partial: 'form', locals: { group: @members }
+  = render partial: 'form', locals: { group: @group }
   
